[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/SmallFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/LevelSelectPage.gd" type="Script" id=2]
[ext_resource path="res://fonts/ButtonFont.tres" type="DynamicFont" id=3]

[node name="LevelSelectPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 1 )
text = "World Name (FIXME)"
align = 1

[node name="LevelButtons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="1" type="Button" parent="LevelButtons"]
margin_left = 150.0
margin_top = 150.0
margin_right = 250.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 3 )
text = "1"

[node name="2" type="Button" parent="LevelButtons"]
margin_left = 350.0
margin_top = 150.0
margin_right = 450.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 3 )
text = "2"

[node name="3" type="Button" parent="LevelButtons"]
margin_left = 550.0
margin_top = 150.0
margin_right = 650.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 3 )
text = "3"

[node name="4" type="Button" parent="LevelButtons"]
margin_left = 750.0
margin_top = 150.0
margin_right = 850.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 3 )
text = "4"

[node name="5" type="Button" parent="LevelButtons"]
margin_left = 150.0
margin_top = 350.0
margin_right = 250.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 3 )
text = "5"

[node name="6" type="Button" parent="LevelButtons"]
margin_left = 350.0
margin_top = 350.0
margin_right = 450.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 3 )
text = "6"

[node name="7" type="Button" parent="LevelButtons"]
margin_left = 550.0
margin_top = 350.0
margin_right = 650.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 3 )
text = "7"

[node name="8" type="Button" parent="LevelButtons"]
margin_left = 750.0
margin_top = 350.0
margin_right = 850.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 3 )
text = "8"
[connection signal="pressed" from="LevelButtons/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="LevelButtons/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="LevelButtons/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="LevelButtons/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="LevelButtons/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="LevelButtons/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="LevelButtons/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="LevelButtons/8" to="." method="_on_8_pressed"]
